[build-system]
requires = [
    "setuptools>=45",
    "wheel",
    "numpy>=1.23.4",
    "scipy>=1.9.3",
    "numba>=0.56.3",
    "pyyaml>=6.0",
    "requests>=2.9.2",
    "pytz~=2021.1",
    "pillow>=9.2.0",
    "pandas>=1.5.1",
    "matplotlib>=3.6.2",
    "pysimplegui>=4.60.4",
]
build-backend = "setuptools.build_meta"